tests/snapshots/python_snapshots__snapshots_buffered_input_prompt_matching_primary_prompt.snap
---
source: tests/python_snapshots.rs
expression: rendered
---
== session: input_prompt_matching_ps1 ==
-- step 1 --
call:
{
  "tool": "py_repl",
  "arguments": {
    "input": "import sys\nsys.ps1 = \"same> \"\nvalue = input(\"same> \")\nprint(\"MATCHED_PROMPT_VALUE\", value)\n",
    "timeout_ms": 5000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "same> "
    }
  ]
}
-- step 2 --
call:
{
  "tool": "py_repl",
  "arguments": {
    "input": "buffered\n",
    "timeout_ms": 5000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "MATCHED_PROMPT_VALUE buffered"
    }
  ]
}
