tests/snapshots/python_snapshots__snapshots_buffered_input_prompt_matching_primary_prompt@transcript.snap
---
source: tests/python_snapshots.rs
expression: transcript
---
== session: input_prompt_matching_ps1 ==
1) py_repl timeout_ms=5000
>>> import sys
>>> sys.ps1 = "same> "
>>> value = input("same> ")
>>> print("MATCHED_PROMPT_VALUE", value)
<<< same> 

2) py_repl timeout_ms=5000
>>> buffered
<<< MATCHED_PROMPT_VALUE buffered
<<<
